--- a/MapMaven/Components/Maps/AdvancedSearch.razor
+++ b/MapMaven/Components/Maps/AdvancedSearch.razor
@@ -11,10 +11,10 @@
     <MudDialog Class="no-title">
         <DialogContent>
             <MudPaper Class="my-4" Style="background-color: var(--mud-palette-drawer-background);">
-                <MudList>
+                <MudList T="string">
                     <MudListSubheader Class="d-flex align-center justify-space-between">
                         Filters
-                        <MudIconButton Icon="@Icons.Filled.Add" Variant="Variant.Outlined" Size="Size.Small" OnClick="AddFilterOperation" />
+                        <MudIconButton Icon="@Icons.Material.Filled.Add" Variant="Variant.Outlined" Size="Size.Small" OnClick="AddFilterOperation" />
                     </MudListSubheader>
                     @foreach (var filterOperation in Configuration.FilterOperations)
                     {
@@ -26,7 +26,7 @@
             </MudPaper>
 
             <MudPaper Style="background-color: var(--mud-palette-drawer-background);">
-                <MudList>
+                <MudList T="string">
                     <MudListSubheader Class="d-flex align-center justify-space-between">
                         Sorting
                         <MudIconButton Icon="@Icons.Filled.Add" Variant="Variant.Outlined" Size="Size.Small" OnClick="AddSortOperation" />
