--- a/MapMaven/Components/Playlists/PlaylistList.razor
+++ b/MapMaven/Components/Playlists/PlaylistList.razor
@@ -3,7 +3,7 @@
 @inherits ReactiveComponent
 
 <div class="fill-remaining-space">
-    <MudList Class="d-flex flex-column" Clickable="true" Color="Color.Primary" Style="height: 50%;">
+    <MudList T="string" Class="d-flex flex-column" Clickable="true" Color="Color.Primary" Style="height: 50%;">
         <MudListSubheader Class="d-flex align-center justify-space-between py-2" Style="border-top: 1px solid var(--mud-palette-table-lines)">
             <div class="d-flex align-center">
                 <MudIcon Icon="@Icons.Filled.PlaylistPlay"></MudIcon> Playlists
@@ -49,7 +49,7 @@
         </div>
     </MudList>
 
-    <MudList Class="d-flex flex-column" Clickable="true" Color="Color.Primary" Style="height: 50%;">
+    <MudList T="string" Class="d-flex flex-column" Clickable="true" Color="Color.Primary" Style="height: 50%;">
         <MudListSubheader Class="d-flex align-center justify-space-between py-2" Style="border-top: 1px solid var(--mud-palette-table-lines)">
             <div class="d-flex align-center">
                 <MudIcon Icon="@Icons.Filled.PlaylistPlay"></MudIcon> Dynamic Playlists
