--- a/MapMaven/Components/Maps/ImprovementTweaker.razor
+++ b/MapMaven/Components/Maps/ImprovementTweaker.razor
@@ -89,7 +89,7 @@
                            OnClick="ClearSelection">
                     Clear selection
                 </MudButton>
-                <MudChip Variant="Variant.Outlined" Class="full-width mx-0 mt-3">
+                <MudChip T="string" Variant="Variant.Outlined" Class="full-width mx-0 mt-3">
                     @SelectedMaps.Count() maps (+@SelectedMaps.Sum(m => m.ScoreEstimates.FirstOrDefault()?.PPIncrease ?? 0).ToString("#0.##") pp)
                 </MudChip>
                 <MudMenu Label="Actions" Class="full-width mx-0 my-3" FullWidth="true" Variant="Variant.Outlined" StartIcon="@Icons.Material.Filled.Menu">
