MudBlazor 7 partial update

--- a/MapMaven/Components/Maps/AdvancedSearch.razor
+++ b/MapMaven/Components/Maps/AdvancedSearch.razor
@@ -29,7 +29,7 @@
                 <MudList T="string">
                     <MudListSubheader Class="d-flex align-center justify-space-between">
                         Sorting
-                        <MudIconButton Icon="@Icons.Filled.Add" Variant="Variant.Outlined" Size="Size.Small" OnClick="AddSortOperation" />
+                        <MudIconButton Icon="@Icons.Material.Filled.Add" Variant="Variant.Outlined" Size="Size.Small" OnClick="AddSortOperation" />
                     </MudListSubheader>
                     @for (var i = 0; i < Configuration.SortOperations.Count; i++)
                     {
