--- a/MapMaven/Components/Maps/MapBrowser.razor
+++ b/MapMaven/Components/Maps/MapBrowser.razor
@@ -145,7 +145,7 @@
 
                     <MudTooltip Text="Difficulty modifier">
                         <MudChip T="string" Variant="Variant.Outlined" Style="@chipStyle">
-                            <MudIcon Icon="@Icons.Filled.Speed" Class="mr-2"></MudIcon>
+                            <MudIcon Icon="@Icons.Material.Filled.Speed" Class="mr-2"></MudIcon>
                             @(DifficultyModifier >= 0 ? "+" : string.Empty)@DifficultyModifier%
                         </MudChip>
                     </MudTooltip>
