--- a/MapMaven/Components/Playlists/PlaylistCover.razor
+++ b/MapMaven/Components/Playlists/PlaylistCover.razor
@@ -9,7 +9,7 @@
 }
 else
 {
-    <MudIcon Icon="@Icons.Filled.PlaylistPlay" Class="@Class" Style="@Style"></MudIcon>
+    <MudIcon Icon="@Icons.Material.Filled.PlaylistPlay" Class="@Class" Style="@Style"></MudIcon>
 }
 
 @code {
