--- a/MapMaven/Components/Playlists/PlaylistEditor.razor
+++ b/MapMaven/Components/Playlists/PlaylistEditor.razor
@@ -8,7 +8,7 @@
             }
             else
             {
-                <MudIcon Icon="@Icons.Filled.Image" Size="Size.Large"></MudIcon>
+                <MudIcon Icon="@Icons.Material.Filled.Image" Size="Size.Large"></MudIcon>
                 <MudText Typo="Typo.subtitle2">Click to browse for cover images...</MudText>
             }
         </MudPaper>
