--- a/MapMaven/Components/Settings.razor
+++ b/MapMaven/Components/Settings.razor
@@ -21,7 +21,7 @@
             Label="Beat Saber install location"
             Class="mb-4"
             Adornment="Adornment.End"
-            AdornmentIcon="@Icons.Filled.DriveFileMove"
+            AdornmentIcon="@Icons.Material.Filled.DriveFileMove"
             OnAdornmentClick="PickFolder">
         </MudTextField>
 
