--- a/MapMaven/Components/SideNav.razor
+++ b/MapMaven/Components/SideNav.razor
@@ -13,7 +13,7 @@
             </MudNavLink>
         }
         <div @onclick="OnMapsNavigation">
-            <MudNavLink Icon="@Icons.Filled.LibraryMusic"
+            <MudNavLink Icon="@Icons.Material.Filled.LibraryMusic"
                         DisableRipple="true"
                         Match="NavLinkMatch.All"
                         Href="/maps">
@@ -23,7 +23,7 @@
         @if (!string.IsNullOrEmpty(PlayerId))
         {
             <div @onclick="OnMapsNavigation">
-                <MudNavLink Icon="@Icons.Filled.KeyboardDoubleArrowUp"
+                <MudNavLink Icon="@Icons.Material.Filled.KeyboardDoubleArrowUp"
                             DisableRipple="true"
                             Match="NavLinkMatch.All"
                             Href="/improve">
