--- a/MapMaven/Components/Maps/MapBrowserRow.razor
+++ b/MapMaven/Components/Maps/MapBrowserRow.razor
@@ -9,13 +9,13 @@
     <HeaderTemplate>
         @if (Selectable)
         {
-            <MudCheckBox T="bool" Checked="@context.IsAllSelected" CheckedChanged="@context.Actions.SetSelectAllAsync" Class="ma-3" />
+            <MudCheckBox T="bool?" Value="@context.IsAllSelected" ValueChanged="@context.Actions.SetSelectAllAsync" Class="ma-3" />
         }
     </HeaderTemplate>
     <CellTemplate>
         @if (Selectable)
         {
-            <MudCheckBox T="bool" Checked="@context.IsSelected" CheckedChanged="@context.Actions.SetSelectedItemAsync" Class="ma-3" />
+            <MudCheckBox T="bool" Value="@context.Selected" ValueChanged="@context.Actions.SetSelectedItemAsync" Class="ma-3" />
         }
     </CellTemplate>
 </TemplateColumn>
@@ -115,7 +115,7 @@
     Visible="!string.IsNullOrEmpty(PlayerId)">
     <HeaderTemplate>
         <div class="d-flex">
-            <MudIcon Icon="@Icons.Filled.KeyboardDoubleArrowUp"></MudIcon>pp
+            <MudIcon Icon="@Icons.Material.Filled.KeyboardDoubleArrowUp"></MudIcon>pp
         </div>
     </HeaderTemplate>
     <CellTemplate>
@@ -130,7 +130,7 @@
                         }
                         <MudChip T="string" Size="Size.Small" Variant="Variant.Outlined" Style="@chipStyle">
                             @DifficultyDisplayUtils.GetShortName(scoreEstimate.Difficulty) |
-                            @scoreEstimate.Stars.ToString("#0.##") <MudIcon Icon="@Icons.Filled.Star" Size="Size.Small"></MudIcon> |
+                            @scoreEstimate.Stars.ToString("#0.##") <MudIcon Icon="@Icons.Material.Filled.Star" Size="Size.Small"></MudIcon> |
                             @scoreEstimate.Accuracy.ToString("#0.##") % |
                             +@scoreEstimate.PPIncrease.ToString("#0.##") pp
                         </MudChip>
@@ -171,12 +171,12 @@
     <CellTemplate>
         <div class="d-flex" style="min-width: 100px">
             <MudTooltip Text="Add map to playlist" ShowOnFocus="false">
-                <MudIconButton Icon="@Icons.Filled.PlaylistAdd" Variant="Variant.Text" Size="Size.Medium" OnClick="() => OpenAddMapToPlaylistDialog(context.Item)" />
+                <MudIconButton Icon="@Icons.Material.Filled.PlaylistAdd" Variant="Variant.Text" Size="Size.Medium" OnClick="() => OpenAddMapToPlaylistDialog(context.Item)" />
             </MudTooltip>
             @if (SelectedPlaylist != null && !SelectedPlaylist.IsDynamicPlaylist)
             {
                 <MudTooltip Text="Remove map from playlist" ShowOnFocus="false">
-                    <MudIconButton Icon="@Icons.Filled.PlaylistRemove" Variant="Variant.Text" Size="Size.Medium" OnClick="() => OpenDeleteFromPlaylistDialog(context.Item)" />
+                    <MudIconButton Icon="@Icons.Material.Filled.PlaylistRemove" Variant="Variant.Text" Size="Size.Medium" OnClick="() => OpenDeleteFromPlaylistDialog(context.Item)" />
                 </MudTooltip>
             }
             @if (SelectedPlaylist == null || !SelectedPlaylist.IsDynamicPlaylist)
