--- a/MapMaven/Components/Playlists/EditDynamicPlaylistDialog.razor
+++ b/MapMaven/Components/Playlists/EditDynamicPlaylistDialog.razor
@@ -22,7 +22,7 @@
             <div id="custom-dynamic-playlist" class="pt-4 mt-4 d-flex flex-column flex-center">
                 <MudButton OnClick="ConfigureCustomDynamicPlaylist" Variant="Variant.Outlined">
                     <div class="d-flex flex-column align-center justify-center dynamic-playlist-add">
-                        <MudIcon Icon="@Icons.Filled.Settings" Size="Size.Large" Class="mb-2"></MudIcon> Custom
+                        <MudIcon Icon="@Icons.Material.Filled.Settings" Size="Size.Large" Class="mb-2"></MudIcon> Custom
                     </div>
                 </MudButton>
             </div>
@@ -98,7 +98,7 @@ else
                     <MudList T="string">
                         <MudListSubheader Class="d-flex align-center justify-space-between">
                             Filters
-                            <MudIconButton Icon="@Icons.Filled.Add" Variant="Variant.Outlined" Size="Size.Small" OnClick="AddFilterOperation" />
+                            <MudIconButton Icon="@Icons.Material.Filled.Add" Variant="Variant.Outlined" Size="Size.Small" OnClick="AddFilterOperation" />
                         </MudListSubheader>
                         @foreach (var filterOperation in configuration.FilterOperations)
                         {
@@ -113,7 +113,7 @@ else
                     <MudList T="string">
                         <MudListSubheader Class="d-flex align-center justify-space-between">
                             Sorting
-                            <MudIconButton Icon="@Icons.Filled.Add" Variant="Variant.Outlined" Size="Size.Small" OnClick="AddSortOperation" />
+                            <MudIconButton Icon="@Icons.Material.Filled.Add" Variant="Variant.Outlined" Size="Size.Small" OnClick="AddSortOperation" />
                         </MudListSubheader>
                         @for (var i = 0; i < configuration.SortOperations.Count; i++)
                         {
